# zetta-capstone-2

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  docker-compose.yml  render.yaml  verify.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: companies.py  enrich.py
backend/app/core/: celery_app.py  config.py  db.py
backend/app/models/: __init__.py  company.py  job.py
backend/app/repos/: company_repo.py  job_repo.py
backend/app/schemas/: company.py  job.py
backend/app/services/: company_cache.py  enrichment.py  scraper.py
backend/app/services/llm/: base.py  factory.py  groq.py
backend/app/tests/unit/: test_domain.py
backend/app/utils/: domain.py
backend/app/workers/: enrich.py
frontend/: .env.example  package-lock.json  package.json  server.mjs
frontend/app/: globals.css  layout.js  page.js
frontend/app/api/: _backend.js
frontend/app/api/companies/: route.js
frontend/app/api/companies/[domain]/: route.js
frontend/app/api/enrich/: route.js
frontend/app/api/enrich/[jobId]/: route.js
